
2.3.19-teclib-1 Tue,  4 Oct 2016
* FusionInventory Agent 2.3.19-teclib-1 (commit: 68e4c5a37b | date: oct  4 2016)

core:
* Minor memory leak fix
* Hyper-V inventory fix
* Acer monitor inventory update
* Update PCI IDs database (pci.ids file) from 2016.06.07 to 2016.10.03
* Update USB IDs database (usb.ids file) from 2016.03.03 to 2016.09.29

2.3.18 Sat, 18 Jun 2016
agent:
* FusionInventory Agent 2.3.18 (commit: b7c47ea3d5 | date: jun 16 2016)
* Win32 service refactoring
* Fixed & enhanced P2P support
* Win32 crash fixes

command line interface:
* Add support to the new --tasks option
* Add support to the new --conf-reload-interval option

core:
* Include missing categories for /no-category option
* Fix of the processing of values of /no-category option because of
  they are case-sensitive and must be in lower case
* Update PCI IDs database (pci.ids file) from 2015.03.01 to 2016.06.07
* Update USB IDs database (usb.ids file) from 2015.02.21 to 2016.03.03

documentation:
* New entry for /tasks option
* New entry for /conf-reload-interval option
* New categories 'antivirus', 'port' and 'remote_mgmt'

strawberry perl package:
* Based on Strawbarry Perl 5.22.2.1 (May 2016)
* Add missing Perl modules regarding SNMPv3 (#11)
* Add Perl Modules for testing FIA (#22)
* Add Sys::Syslog Perl module (#23)
* Add Data::Structure::Util Perl module
* Add JSON::PP Perl module

2.3.17 Thu, 29 Sep 2015
agent:
* FusionInventory Agent 2.3.17 (commit: dd340384b0 | date: sep 27 2015)

core:
* Add support for task Collect (#8).
* Update PCI IDs database (pci.ids file) from 2015.03.01 to 2015.09.29
* Update USB IDs database (usb.ids file) from 2015.02.21 to 2015.09.28

documentation:
* New references to GitHub.

strawberry perl package:
* Based on Strawbarry Perl 5.22.0.1 (Jun 2015) (#7).

2.3.16 Wed, 18 Mar 2015
agent:
* FusionInventory Agent 2.3.16 (commit: 73531ae127)

core:
* Update PCI IDs database (pci.ids file) from 2015.03.01 to 2015.03.17